# algo-lab-project

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
docs/: kaytto.md  maarittely.md  testaus.md  toteutus.md  viikko_1.md  viikko_2.md  viikko_3.md  viikko_4.md  viikko_5.md  viikko_6.md
src/: generator.py  index.py  matrix.py  midi.py  trie.py
src/tests/: generator_test.py  midi_test.py
