[tool.poetry]
name = "algo-lab-project"
version = "0.1.0"
description = ""
authors = ["samushka13 <56408918+samushka13@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
invoke = "^2.2.0"
mido = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
rope = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
